--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -5,6 +5,7 @@
 	<li>Descripción: <%= @query.description %></li>
 	<li>Fecha de creación: <%= @query.created_at %></li>
 	<li>Estado: <%= @query.status %></li>
+	<li>Algoritmo aplicado: <%= @query.algorithm %></li>
 	<li>Ruta: <%= File.dirname(@query.queryfile.current_path.to_s) if @query.queryfile? %></li>
 	<li>Archivo: <%= File.basename(@query.queryfile.to_s) if @query.queryfile? %></li>
 	<li>Tipo: <%= File.extname(@query.queryfile.to_s) if @query.queryfile? %> </li>
