--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -11,7 +11,7 @@
 			<%= f.text_field :description, class: 'form-control' %>
 
 			<span class="fileuploader">
-				<%= f.file_field :queryfile, accept:".txt,.arff,.csv,.dat" %>
+				<%= f.file_field :queryfile, accept:".arff,.dat" %>
 			</span>
 
 			<label for="query_description">Clasificador</label>
