--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -14,6 +14,13 @@
 				<%= f.file_field :queryfile, accept:".arff,.dat" %>
 			</span>
 
+			<label for="query_description">Discretizador</label>
+			<%= f.select(:discretization) do %>
+				<% @options_dis.each do |c| %>
+					<%= content_tag(:option, c.first, value: c.last) %>
+				<% end %>
+			<% end %>
+
 			<label for="query_description">Clasificador</label>
 			<%= f.select(:algorithm) do %>
 				<% @options.each do |c| %>
