Change absolute path to relative path for algorithms execution

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,4 +2,4 @@
 <h1>Inicio</h1>
 <p>Página de inicio del proyecto</p><br>
 
-<p>Descripción de las funcionalidades principales de la página</p>
+<p>Sube un archivo .arff o .dat, elige un algoritmo y espera los resultados. También puedes elegir un discretizador, aunque no es obligatorio, es recomendable para archivos con variables continuas.</p>
