Correct email activation and password recovery

--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,5 @@
-Hi <%= @user.name %>
+Hola <%= @user.name %>,
 
-Welcome to Sample App! Click on the link below to activate your account:
+¡Bienvenido a la aplicación! Por favor, haz clic en el siguiente enlace para activar tu cuenta:
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
