--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,9 +1,9 @@
 <h1>TFG</h1>
 
-<p>Hi <%= @user.name %></p>
+<p>Hola <%= @user.name %>,</p>
 
 <p>
-Welcome to Sample App! Click on the link below to activate your account:
+¡Bienvenido a la aplicación! Por favor, haz clic en el siguiente enlace para activar tu cuenta:
 </p>
 
-<%= link_to "Activate", edit_account_activation_url(@user.activation_token, email: @user.email) %>
+<%= link_to "Activa mi cuenta", edit_account_activation_url(@user.activation_token, email: @user.email) %>
