--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -2,6 +2,8 @@
 
 <p>Para reiniciar tu password haz clic en el siguiente enlace:</p>
 
+Enlace
+
 <%= link_to "Reiniciar password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
 <p>Este enlace caducará en dos horas.</p>
