--- a/app/views/queries/_query.html.erb
+++ b/app/views/queries/_query.html.erb
@@ -1,10 +1,10 @@
 <tr id="query-<%= query.id %>">
-	<td> <%= query.description %> </td>
-	<td>Iniciada <%= query.created_at %> </td>
-	<td> <%= query.status %> </td>
-	<td>Archivo: <%= query.queryfile.current_path.to_s if query.queryfile? %> </td>
-	<td> <%= query.algorithm %> </td>
+	<td><%= query.description %> </td>
+	<td><%= l query.created_at, format: :short %> </td>
+	<td><%= query.status %> </td>
+	<td><%= File.basename(query.queryfile.to_s) if query.queryfile? %> </td>
+	<td><%= query.algorithm.upcase %> </td>
 	<td><%= link_to "Ver", query %></td>
-	<td> <%= link_to "Eliminar consulta", query, method: :delete, 
+	<td><%= link_to "Eliminar consulta", query, method: :delete, 
 										data: { confirm: "¿Seguro que quieres borrar la consulta?" } %> </td>
 </tr>
