--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<small>
-		Universidad de Jaén 2015-16, TFG por David Abad Vich. Desarrollado con Ruby on Rails.
+		Universidad de Jaén 2015-16, TFG por David Abad Vich. Desarrollado con JRuby on Rails.
 	</small>
 	<nav>
 		<ul>
