--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, "About") %>
-<h1>Sobre la página</h1>
-<p>Proyecto para TFG desarrollado por David Abad Vich <br>
- 	Universidad de Jaén, 2015-16</p>
+<h1>Contacto</h1>
+<div>
+	<p>Si tienes cualquier duda o sugerencia, puedes enviar un correo a dav00004.tfg@gmail.com</p>
+	<p>Perfil en <a class="underline" href="https://github.com/Dabadvic" target="_blank">GitHub</a></p>
+</div>
