--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "Home") %>
 <h1>Inicio</h1>
-<p>Página de inicio del proyecto</p><br>
+<h2>Página de inicio del proyecto</h2>
+
+<p>Aplicación para la extracción de reglas descriptivas en Minería de datos.</p>
 
 <p>Sube un archivo .arff o .dat, elige un algoritmo y espera los resultados. También puedes elegir un discretizador, aunque no es obligatorio, es recomendable para archivos con variables continuas.</p>
