--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul.instructions {
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	li {
+		/*padding-bottom: 5px;*/
+		padding: 8px 16px;
+	}
+}
+
+div.instructions_div {
+	padding-top: 10px;
+}
+
+div.pregunta {
+	padding-top: 20px;
+}
