--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -22,7 +22,7 @@
 				<% end %>
 			<% end %>
 
-			<% options = [['- Requieren discretizar:', "re_dis"], ['Apriori', "apriori"], ['CN2-SD', "cn2"], 
+			<% options = [['- Requieren discretizar:', "re_dis"], ['Apriori', "no_dis"], ['CN2-SD', "cn2"], 
 							['SD-Map', "sdmap"], ['SD-Algorithm', "sd"], 
 							['- No requieren discretizar:', "no_dis"], ['MESDIF', "mesdif"], ['SDIGA', "sdiga"]] %>
 			<label for="query_description">Clasificador</label>
