Fix small mistakes

--- a/app/views/queries/new.html.erb
+++ b/app/views/queries/new.html.erb
@@ -25,7 +25,7 @@
 			<% options = [['- Requieren discretizar:', "re_dis"], ['Apriori', "no_dis"], ['CN2-SD', "cn2"], 
 							['SD-Map', "sdmap"], ['SD-Algorithm', "sd"], 
 							['- No requieren discretizar:', "no_dis"], ['MESDIF', "mesdif"], ['SDIGA', "sdiga"]] %>
-			<label for="query_description">Clasificador</label>
+			<label for="query_description">Algoritmo</label>
 			<%= f.select(:algorithm) do %>
 				<% options.each do |c| %>
 					<%= content_tag(:option, c.first, value: c.last, :disabled => (true if c.last == "no_dis" || c.last == "re_dis")) %>
