--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, "Home") %>
 <h1>Inicio</h1>
-<h2>Página de inicio del proyecto</h2>
+<h2>Aplicación web para la extracción de reglas descriptivas en Minería de Datos orientada al análisis de datos médicos</h2>
 
-<p>Aplicación para la extracción de reglas descriptivas en Minería de datos.</p>
-
-<p>Sube un archivo .arff o .dat, elige un algoritmo y espera los resultados. También puedes elegir un discretizador, aunque no es obligatorio, es recomendable para archivos con variables continuas.</p>
+<p>Instrucciones breves: <br>
+	Sube un archivo .arff o .dat, elige un algoritmo y espera los resultados. También puedes elegir un discretizador, aunque no es obligatorio, es recomendable para archivos con variables continuas.</p>
