--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse" id="cabecera">
-	<div class="">
-		<div id="title-container">
-			<h1 id="titulo">Aplicación para la extración de reglas descriptivas</h1>
+	<div id="header" style="padding-left:0px">
+		<div id="title-container" style="padding-left:0px">
+			<h1 id="titulo">Aplicación web</h1>
 		</div>
 		<table class="menu">
 			<tr>
