Fix AprioriSD algorithm

--- a/app/views/queries/confirm.html.erb
+++ b/app/views/queries/confirm.html.erb
@@ -37,6 +37,8 @@
 					<%= render 'queries/options/sdiga' %>
 				<% when "sd" %>
 					<%= render 'queries/options/sd' %>
+				<% when "apriorisd" %>
+					<%= render 'queries/options/apriorisd' %>
 			<% end %>
 
 			<%= f.submit "Confirmar", class: "btn btn-success" %>
